@@ -3,6 +3,8 @@ DISK_LABEL = "Speakup driver module floppy"
 TARGET = $(EXTRA)
 EXTRANAME = access/drivers
 
+MANIFEST-EXTRA = "driver floppy for the blind"
+
 # No kernel.
 KERNELNAME =
 
