@@ -2,5 +2,7 @@ DISK_LABEL = "boot floppy"
 
 TARGET = $(BOOT)
 
+MANIFEST-BOOT = "boot floppy for network, CD, or USB installs"
+
 # HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
 TYPE=bootfloppy
