@@ -5,6 +5,8 @@ EXTRADRIVERS = $(BASE_TMP)floppy/cd-drivers/tree $(BASE_TMP)floppy/net-drivers/t
 EXTRATARGETS = build_floppy_cd-drivers build_floppy_net-drivers
 TARGET = $(ROOT)
 
+MANIFEST-ROOT = "second floppy for network or CD installs"
+
 # No kernel.
 KERNELNAME =
 
