@@ -9,5 +9,7 @@ DISK_LABEL = "boot floppy"
 TARGET = $(BOOT)
 EXTRANAME = access/
 
+MANIFEST-BOOT = "boot floppy for the blind"
+
 # HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
 TYPE=speakup
