@@ -9,3 +9,7 @@ MEDIA_TYPE = bootable drive
 GZIPPED = .gz
 EXTRANAME = hd-media/
 TARGET = $(KERNEL) $(INITRD) $(BOOT)
+
+MANIFEST-BOOT = "123 mb image (compressed) for USB memory stick"
+MANIFEST-INITRD = "for use on USB memory sticks"
+MANIFEST-KERNEL = "for use on USB memory sticks"
