@@ -3,7 +3,7 @@ MEDIA_TYPE = netboot image
 TARGET = $(BOOT)
 EXTRANAME = $(MEDIUM)-
 
-MANIFEST-BOOT = "$(SUBARCH)/$(MEDIUM)-boot.img: tftp boot image for SGI IP22 machines with R5000 CPU"
+MANIFEST-BOOT = "tftp boot image for SGI IP22 machines with R5000 CPU"
 
 # Create a bootable tftp image.
 .PHONY: arch_boot
