@@ -51,6 +51,7 @@ debian-installer (20040204) UNRELEASED; urgency=low
     - Add a dest/cdrom/debian-cd_info.tar.gz with the syslinux screens
       and splash image, for eventual use by debian-cd.
     - Convert the miniiso to use isolinux, to support any size initrd.
+    - Improvements to manifest generation and formatting.
   * Richard Hirst
     - ia64: Fix cdrom to autoboot, and tidy up kernel params.  Partial
       fix for 227114.
